welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: not found: value PrendBiscuit
  	PrendBiscuit();
        ^Methods:8: error: not found: value Recule
  	Recule();
        ^