welcome.lessons.welcome.methods.basics.Methods.scala.code

def goAndGet() {
  for(i<-1 to 6){
  	avance();
  	estSurBiscuit();
  	PrendBiscuit();
  	Recule();
  	poseBiscuit();
	}
 }
    